[EFL] Fix e_dbus_shutdown() error when exiting the Minibrowser https://bugs.webkit.org/show_bug.cgi?id=95636

Patch by Jinwoo Song <jinwoo7.song@samsung.com> on 2012-09-03
Reviewed by Gyuyoung Kim.

Source/WebCore:

Check if the m_timer is active in stopUpdating()
to know the BatteryProvider is updating or not.
By checking the timer, stopUpdating() will be called
only BatteryProviderEfl is updating.

* platform/efl/BatteryProviderEfl.cpp:
(WebCore::BatteryProviderEfl::stopUpdating):

Source/WebKit/efl:

Invoke stopUpdating() in the destructor of BatteryClinetEfl()
to call e_ukit_shutdown() and e_dbus_shutdown() if and when
stopUpdating() has not been called explicitly.

* WebCoreSupport/BatteryClientEfl.cpp:
(BatteryClientEfl::~BatteryClientEfl):
* WebCoreSupport/BatteryClientEfl.h:
(BatteryClientEfl):

Canonical link: https://commits.webkit.org/113593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127436 268f45cc-cd09-0410-ab3c-d52691b4dbfc